--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -73,6 +70,8 @@
                     <div id="contest-data">
                         Loading contest data...
                     </div>
+                    <div id="suggestions-data">
+                    </div>
                     <div id="topic-data">
                         Loading topic data...
                     </div>
@@ -86,6 +85,3 @@
         <script src="script.js"></script>
     </body>
 </html>
-
-
-
