--- a/popup.html
+++ b/popup.html
@@ -33,10 +33,10 @@
             <section id="insights" class="tab-section">
                 <div class="section-content">
                     <h2>💡 AI Insights</h2>
-                    <div class="warning-banner">
+                    <!-- <div class="warning-banner">
                         ⚠️ Responses may take longer if the server was idle, as it
                         needs a few seconds to wake up.
-                    </div>
+                    </div> -->
                     <div id="insight-cards">
                         <div class="insight-card">
                             <h3>🧩 Pseudocode</h3>
